Cherry-pick r255487. rdar://problem/58838583

REGRESSION: [iOS release] http/tests/security/window-named-proto.html is a flaky timing out
    https://bugs.webkit.org/show_bug.cgi?id=206672
    <rdar://problem/58838583>

    Reviewed by Chris Dumez.

    This is a speculative fix to increase the priority of the DataURLDecoder's WorkQueue such that
    it is less likely to be preempted.

    Covered by existing tests.

    * platform/network/DataURLDecoder.cpp:
    (WebCore::DataURLDecoder::decodeQueue):

    Canonical link: https://commits.webkit.org/220049@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255487 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/219244.73@safari-610.1.1-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610.1.1-branch@255637 268f45cc-cd09-0410-ab3c-d52691b4dbfc